--- a/charts/preview/requirements.yaml
+++ b/charts/preview/requirements.yaml
@@ -9,5 +9,5 @@ dependencies:
   repository: https://chartmuseum.build.cd.jenkins-x.io
   version: 2.3.56
 - alias: preview
-  name: node-http
-  repository: file://../node-http
+  name: node-test
+  repository: file://../node-test
