--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -3,7 +3,7 @@ kind: Config
 build:
   tagPolicy:
     envTemplate:
-      template: "{{.DOCKER_REGISTRY}}/igor-clog-io/node-http:{{.VERSION}}"
+      template: "{{.DOCKER_REGISTRY}}/igor-clog-io/node-test:{{.VERSION}}"
   artifacts:
   - imageName: changeme
     workspace: .
@@ -17,15 +17,15 @@ profiles:
   build:
     tagPolicy:
       envTemplate:
-        template: "{{.DOCKER_REGISTRY}}/igor-clog-io/node-http:{{.DIGEST_HEX}}"
+        template: "{{.DOCKER_REGISTRY}}/igor-clog-io/node-test:{{.DIGEST_HEX}}"
     artifacts:
     - docker: {}
     local: {}
   deploy:
     helm:
       releases:
-      - name: node-http
-        chartPath: charts/node-http
+      - name: node-test
+        chartPath: charts/node-test
         setValueTemplates:
-          image.repository: "{{.DOCKER_REGISTRY}}/igor-clog-io/node-http"
+          image.repository: "{{.DOCKER_REGISTRY}}/igor-clog-io/node-test"
           image.tag: "{{.TAG}}"
