--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "body-parser": "^1.18.3",
+    "request": "^2.88.0"
   }
 }
