--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.16.3",
     "body-parser": "^1.18.3",
+    "dotenv": "^6.0.0",
+    "express": "^4.16.3",
     "request": "^2.88.0"
   }
 }
